push for deploy

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Port number
-PORT=3001
+PORT=3003
 NODE_ENV=development
-APP_URL=http://localhost:3001/
+APP_URL=http://localhost:3003/
 
 # URL of the Mongo DB
 MONGODB_URL=mongodb+srv://usama:8YQ4KYmRAyb!m6L@cluster0.yneqevx.mongodb.net/youhook
@@ -11,7 +11,7 @@ MONGODB_PASSWORD=8YQ4KYmRAyb!m6L
 # JWT secret key
 JWT_SECRET=thisisasamplesecret
 # Number of minutes after which an access token expires
-JWT_ACCESS_EXPIRATION_MINUTES=100
+JWT_ACCESS_EXPIRATION_MINUTES=100000
 # Number of days after which a refresh token expires
 JWT_REFRESH_EXPIRATION_DAYS=30
 # Number of minutes after which a reset password token expires
@@ -41,3 +41,4 @@ TWILIO_SERVICE_SID=VA11cb899f503a24322402f37ce445fea0
 
 #in %
 TAX=2
+DELIVERY=3
