--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
   "dependencies": {
     "aws-sdk": "^2.1230.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
