blockuser and home page APIs

--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 # SMTP configuration options for the email service
 # For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
-SMTP_HOST=smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_USERNAME=93419921ca6393
-SMTP_PASSWORD=415f548ff2872e
-EMAIL_FROM=support@yourapp.com
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USERNAME=usamaamjad.hashone@gmail.com
+SMTP_PASSWORD=wiaeosrrgaunsggc
+EMAIL_FROM=support@hawta.com
 
 # AWS credentials
 AWS_BUCKET_REGION="us-east-1"
